--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
 <body>
-<p>Perfavore clicca per fare login</p><button>Test</button>
+<div class="container">
+<p>Perfavore clicca per fare login</p><button type="button" class="btn btn-lg btn-primary">Test</button>
+</div>
+    <script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
