changed index page style

--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
 <body>
 <div class="container">
-<p>Perfavore clicca per fare login</p><button type="button" class="btn btn-lg btn-primary">Test</button>
+    <div class="row center-block">
+        <div class="col-md-4 col-md-offset-4">
+            <div>
+                <p class="text-center lead">
+                    Please click to sign in
+                </p>
+                <button type="submit" class="btn btn-primary center-block">Sing in</button>
+            </div>
+        </div>
+    </div>
 </div>
-    <script src="js/jquery-3.1.1.min.js"></script>
+
+<script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
