added some stuff

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <script src="uport_interaction.js"></script>
     <title>Test</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <p class="text-center lead">
                     Please click to sign in
                 </p>
-                <button type="submit" class="btn btn-primary center-block">Sing in</button>
+                <button type="submit" class="btn btn-primary center-block" onclick="login()">Sing in</button>
             </div>
         </div>
     </div>
