--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <script src="uport_interaction.js"></script>
-    <title>Test</title>
+    <title>Uport login</title>
 </head>
 <body>
 <div class="container">
@@ -13,9 +13,9 @@
         <div class="col-md-4 col-md-offset-4">
             <div>
                 <p class="text-center lead">
-                    Please click to sign in
+                    Please click to login
                 </p>
-                <button type="submit" class="btn btn-primary center-block" onclick="login()">Sing in</button>
+                <button type="submit" class="btn btn-primary center-block" onclick="login()">Login</button>
             </div>
         </div>
     </div>
