--- a/index.html
+++ b/index.html
@@ -8,22 +8,58 @@
     <script src="node_modules/uport-lib/dist/uportlib.min.js"></script>
     <script type="text/javascript" src="node_modules/web3/dist/web3.js"></script>
     <script src="uport_interaction.js"></script>
-    <title>Uport login</title>
+    <title> TestApp</title>
 </head>
 <body>
 <div class="container">
-    <div class="row center-block">
+    <div id="uportData" class="row center-block" style="display: none;">
+        <div>
+            <table>
+                <thead>
+                <tr>
+                    <th><p class="text-center lead">UPort ID></p></th>
+                    <th><p class="text-center lead">Persona name</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th><p class="text-center lead" id="uportId">></p></th>
+                    <th><p class="text-center lead" id="uportName"></p></th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="loginDiv" class="row center-block">
         <div class="col-md-4 col-md-offset-4">
             <div>
                 <p class="text-center lead">
                     Please click to login
                 </p>
-                <button id="loginButton" type="submit" class="btn btn-primary center-block" onclick="login()">Login</button>
+                <button id="loginButton" type="submit" class="btn btn-primary center-block" onclick="login()">Login
+                </button>
             </div>
         </div>
     </div>
 </div>
+<script>
 
+    const $ = (selector) => document.querySelector(selector)
+
+    const fillLoginData = function () {
+        $("#uportId").innerHTML = internalState.addr
+        $("#uportName").innerHTML = internalState.name
+    }
+
+    const login = function () {
+        if (uport_login()) {
+            fillLoginData()
+            $('#loginDiv').style.display = 'none'
+            $('#uportData').style.display = 'inline'
+        }
+    }
+
+</script>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
