--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <table>
                 <thead>
                 <tr>
-                    <th><p class="text-center lead">UPort ID></p></th>
+                    <th><p class="text-center lead">UPort ID</p></th>
                     <th><p class="text-center lead">Persona name</p></th>
                 </tr>
                 </thead>
